--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -24,6 +24,10 @@ $navbar-light-hover-color: $acNavbarLinksColorHover;
   width: 65%;
 }
 
+.ac-w-25 {
+  width: 25%;
+}
+
 .ac-circle-skill {
   width: 15px;
   height: 15px;
@@ -96,5 +100,13 @@ li.event::before {
   ul.timeline {
     list-style-type: none;
     padding-inline-start: 0px;
+  }
+
+  .ac-w-18 {
+    width: 21%;
+  }
+
+  .ac-w-25 {
+    width: 21%;
   }
 }
